--- a/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
+++ b/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
@@ -566,12 +566,32 @@ print(norm_cst_list)
 #        emulator, while the post acquisition functions directly target the 
 #        likelihood or unnormalized posterior density. 
 
-gp_list <- list(llik=em_llik$emulator_model, fwd=em_fwd$emulator_model)
-acq_funcs_pw_gp <- c("neg_var", "neg_entropy")
-acq_funcs_pw_post <- c("")
+# gp_list <- list(llik=em_llik$emulator_model, fwd=em_fwd$emulator_model)
+# acq_funcs_pw_gp <- c("neg_var", "neg_entropy")
+llik_em_list <- list(llik=em_llik, fwd=em_fwd)
 
-acq_pw_gp_list <- compare_acq_funcs_by_model(test_info$input, acq_funcs_pointwise, gp_list)
-acq_pw_post_list <- compare_acq_funcs_by_model(test_info$input, acq_funcs_pw_post, gp_list)
+acq_funcs_pw_gp <- c("llik_neg_var_gp", "llik_neg_entropy_gp")
+acq_funcs_pw_post <- c("llik_neg_var_lik")
+acq_pw_gp_list <- compare_acq_funcs_by_model(test_info$input, acq_funcs_pw_gp, llik_em_list)
+acq_pw_post_list <- compare_acq_funcs_by_model(test_info$input, acq_funcs_pw_post, llik_em_list)
+
+
+tester <- scale_inputs(acq_pw_post_list$fwd, target_bounds=c(1,2))
+acq_pw_gp_llik_plot <- plot_curves_1d_helper(test_info$input, tester,
+                                             plot_title="pw gp acq [llik]",
+                                             line_thickness=line_thickness, design_color=design_color,
+                                             design_pt_size=design_pt_size, xlab="u", ylab="acq")
+plot(acq_pw_gp_llik_plot)
+
+
+lims_post_trim <- get_common_lims(post_approx_llik_plt, post_approx_fwd_plt)
+post_approx_llik_plt <- post_approx_llik_plt %>% 
+                        ggformat_journal(legend_position="bottom", legend.text=element_text(size=20), 
+                                         xlim=lims_post_trim$xlim, ylim=lims_post_trim$ylim)
+post_approx_fwd_plt <- post_approx_fwd_plt %>% 
+                       ggformat_journal(legend_position="bottom", legend.text=element_text(size=20), 
+                                        xlim=lims_post_trim$xlim, ylim=lims_post_trim$ylim)
+
 
 ```
 
