GP method to compute expected conditional variance now working.

--- a/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
+++ b/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
@@ -609,12 +609,18 @@ plot(acq_int_plt_fwd)
 #    - When implementing these methods and the acquisition functions that call these methods, 
 #      need to think about the case when there are multiple underlying GPs. 
 ```
+
 ```{r}
 # Integrated criteria. 
-test <- evaluate_gp_acq_func_vectorized(acq_IEVAR_grid2, test_info$input, gp=em_fwd$emulator_model,
-                                        grid_points=test_info$input)
-tester <- cbind(a=acq_int_list$fwd[,"llik_IVAR_grid_gp"], b=test)
-tester <- scale_acq(tester)
+
+
+
+test1 <- evaluate_gp_acq_func_vectorized(acq_IEVAR_grid, test_info$input, gp=em_fwd$emulator_model,
+                                         grid_points=test_info$input)
+test2 <- evaluate_gp_acq_func_vectorized(acq_IEVAR_grid2, test_info$input, gp=em_fwd$emulator_model,
+                                         grid_points=test_info$input)
+tester <- cbind(test1, test2)
+
 
 plot_curves_1d_helper(test_info$input, tester, plot_title="Integrated acq [fwd]",
                                          line_thickness=line_thickness, design_color=design_color,
